--- a/weather.css
+++ b/weather.css
@@ -3,6 +3,7 @@
   padding: 0;
 }
 body {
+  scroll-behavior:smooth;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
@@ -10,26 +11,34 @@ body {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  border: 5px solid gray;
+  border-color: transparent;
+  /* padding: 10px; */
   /* flex-direction: column-reverse; */
 
   
   /* height: 100vh; */
 }
-.wather_contaner {
+.first_dive {
   background: url("rany.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: fixed;
   color: white;
+  max-height: max-content;
 }
 .side_bar {
   display: flex;
   flex-direction: column;
   gap: 1rem;
   align-items: center;
-  background-color: rgba(128, 128, 128, 0.743);
-  backdrop-filter: blur(30);
+  /* background: gray; */
+  background-color: rgb(128 128 128 / 60%);
+  background-color: transparent;
+  backdrop-filter: blur(15px);
   padding: 30px;
+  height: 100vh;
+  border-left: 0.5px solid rgba(255, 255, 255, 0.563);
 }
 .country_show {
   font-size: 30px;
@@ -56,10 +65,10 @@ body {
   font-size: 20px;
 }
 .maintain{
-  color: rgba(40, 37, 37, 0.811);
-  font-size: 30px;
+  color: rgba(255, 255, 255, 0.686);
+  font-size: 40px;
   font-weight: bolder;
-  padding-bottom: 10px;
+  padding-bottom: 22px;
 }
 .maintainence{
   display: flex;
@@ -69,27 +78,38 @@ body {
 }
 .days_count{
   display: flex;
+  padding-top: 10px;
+  /* flex-direction: row; */
   justify-content: left;
   gap: 0.4rem;
 }
 .days_Wheater{
-  padding-top: 30px;
   display: flex;
   flex-direction: column;
+  justify-content:left;
   gap: 1rem;
 }
+.border{
+  border-right: 1px solid rgba(255, 255, 255, 0.617);
+  padding: 0 20px;
+
+}
+.min_max_temp{
+  padding-left: 15px;
+  font-weight: bold;
+}
 .only_img_bg{
-  background: rgba(128, 128, 128, 0.734);
+  background: rgb(128 128 128 / 60%);
   backdrop-filter: blur(30);
-  padding: 5px;
+  /* padding: 5px; */
   border-radius: 10px;
 }
 .condition_1,.condition_2,.condition_3,.condition_4{
-  color: rgba(47, 45, 45, 0.857);
+  color: rgba(244, 242, 242, 0.859);
 }
 .maintane_temprature {
   font-size: 40px;
-  color: rgba(16, 16, 16, 0.758);
+  color: white;
   font-weight: bolder;
 }
 .maintain {
@@ -99,20 +119,37 @@ body {
   width: 41.5px;
 }
 .first {
-  background:  rgba(128, 128, 128, 0.743);
-  backdrop-filter: blur(300);
+  background-color: rgb(128 128 128 / 60%);
+  background-color: transparent;
+  backdrop-filter: blur(15px);
   text-align: center;
   padding: 10px;
+  border-radius: 6%;
+}
+.rainy{
+  background: rgba(128, 128, 128, 0.399);
+  backdrop-filter: blur(30);
+  border-radius: 5px;
+}
+.time{
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  padding-bottom:6px ;
+  font-size: 14px;
+  text-decoration-color:rgba(169, 163, 163, 0.575) ;
+}
+.temperature{
+  font-weight: bolder;
+}
+.jsb{
+  border-bottom: 1px solid rgb(10, 9, 9);
 }
 .position{
     position: absolute;
-    bottom: 6%;
+    bottom: 4%;
     left: 2%;
-    right: 26%;
-    /* top: 0%; */
-    /* display: flex;
-    flex-wrap: wrap;
-    justify-content: center; */
+    right: 28%;
+    gap: 2rem;
 
 }
 .rainy{
@@ -123,6 +160,10 @@ body {
   gap: 1rem;
   flex-wrap: wrap;
 } 
+.only_line{
+  border-top: 1px solid rgba(202, 198, 198, 0.676);
+  padding: 10px 0;
+}
 @media (min-width: 1440px){
   .position{
     position: absolute;
